--- a/CookingGameApp/app/src/main/res/layout/activity_menu.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_menu.xml
@@ -15,10 +15,23 @@
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/menubackground"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- 🟡 Reusable Menu Image Behind Everything -->
+    <FrameLayout
+        android:id="@+id/menuImageContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <include layout="@layout/reusable_menu_button" />
+    </FrameLayout>
 
     <!-- Settings Button -->
     <ImageButton
@@ -29,7 +42,7 @@
         android:background="@null"
         android:contentDescription="Settings"
         android:src="@drawable/settings"
-
+        android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,16 +53,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-
         android:baselineAligned="false"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Create Room -->
         <FrameLayout
