--- a/CookingGameApp/app/src/main/res/layout/activity_menu.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_menu.xml
@@ -23,15 +23,107 @@
     <!-- 🟡 Reusable Menu Image Behind Everything -->
     <FrameLayout
         android:id="@+id/menuImageContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="653dp"
+        android:layout_height="357dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <include layout="@layout/reusable_menu_button" />
+
+        <LinearLayout
+            android:id="@+id/buttonRow"
+            android:layout_width="match_parent"
+            android:layout_height="314dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:baselineAligned="false"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <!-- Create Room -->
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/buttonCreateRoom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    android:contentDescription="Create Room"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/createroom" />
+            </FrameLayout>
+
+            <!-- Join -->
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/buttonJoin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    android:contentDescription="Join"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/join" />
+            </FrameLayout>
+
+            <!-- Instruction -->
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/buttonInstruction"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    android:contentDescription="Instructions"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/instruction" />
+            </FrameLayout>
+
+        </LinearLayout>
+
     </FrameLayout>
+
+    <!--    Music switch -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="37dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="2dp"
+            android:contentDescription="Music Icon"
+            android:src="@drawable/music_yellow" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchMusic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"/>
+    </LinearLayout>
 
     <!-- Settings Button -->
     <ImageButton
@@ -47,74 +139,5 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Horizontal Button Row -->
-    <LinearLayout
-        android:id="@+id/buttonRow"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:baselineAligned="false"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- Create Room -->
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
-
-            <ImageButton
-                android:id="@+id/buttonCreateRoom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                android:contentDescription="Create Room"
-                android:scaleType="fitCenter"
-                android:src="@drawable/createroom" />
-        </FrameLayout>
-
-        <!-- Join -->
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
-
-            <ImageButton
-                android:id="@+id/buttonJoin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                android:contentDescription="Join"
-                android:scaleType="fitCenter"
-                android:src="@drawable/join" />
-        </FrameLayout>
-
-        <!-- Instruction -->
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1">
-
-            <ImageButton
-                android:id="@+id/buttonInstruction"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                android:contentDescription="Instructions"
-                android:scaleType="fitCenter"
-                android:src="@drawable/instruction" />
-        </FrameLayout>
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
