--- a/CookingGameApp/app/src/main/res/layout/activity_menu.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_menu.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:background="@null"
-                    android:contentDescription="Create Room"
+                    android:contentDescription="@string/create_room"
                     android:scaleType="fitCenter"
                     android:src="@drawable/createroom" />
             </FrameLayout>
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:background="@null"
-                    android:contentDescription="Join"
+                    android:contentDescription="@string/join"
                     android:scaleType="fitCenter"
                     android:src="@drawable/join" />
             </FrameLayout>
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:background="@null"
-                    android:contentDescription="Instructions"
+                    android:contentDescription="@string/instructions"
                     android:scaleType="fitCenter"
                     android:src="@drawable/instruction" />
             </FrameLayout>
@@ -115,7 +115,7 @@
             android:layout_width="37dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="2dp"
-            android:contentDescription="Music Icon"
+            android:contentDescription="@string/music_icon"
             android:src="@drawable/music_yellow" />
 
         <androidx.appcompat.widget.SwitchCompat
@@ -132,7 +132,7 @@
         android:layout_height="48dp"
         android:layout_margin="16dp"
         android:background="@null"
-        android:contentDescription="Settings"
+        android:contentDescription="@string/settings"
         android:src="@drawable/settings"
         android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
