--- a/CookingGameApp/app/src/main/res/layout/activity_recipe_game.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_recipe_game.xml
@@ -23,13 +23,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/instructionContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/recipeBoard"
+        android:layout_width="336dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="@id/recipeBoard"
-        app:layout_constraintStart_toStartOf="@id/recipeBoard"
         app:layout_constraintEnd_toEndOf="@id/recipeBoard"
-        app:layout_constraintVertical_bias="0.6">
+        app:layout_constraintHorizontal_bias="0.564"
+        app:layout_constraintStart_toStartOf="@id/recipeBoard"
+        app:layout_constraintTop_toTopOf="@id/recipeBoard"
+        app:layout_constraintVertical_bias="0.798">
 
         <include layout="@layout/reusable_instruction_block" />
     </androidx.constraintlayout.widget.ConstraintLayout>
