--- a/CookingGameApp/app/src/main/res/drawable/rounded_light_red.xml
+++ b/CookingGameApp/app/src/main/res/drawable/rounded_light_red.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FF6F61" /> <!-- Stronger coral/red shade -->
-    <corners android:radius="12dp" />
+    <solid android:color="#F6C2CA" />
+    <corners android:radius="16dp" />
 </shape>
+
