--- a/CookingGameApp/app/src/main/res/layout/activity_recipe_game.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_recipe_game.xml
@@ -9,28 +9,27 @@
 
     <ImageView
         android:id="@+id/recipeBoard"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/recipebackground"
+        android:layout_width="609dp"
+        android:layout_height="361dp"
         android:contentDescription="@null"
         android:scaleType="fitCenter"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/recipebackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="1"
-        app:layout_constraintHeight_percent="0.8" />
+        app:layout_constraintHeight_percent="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="1" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/instructionContainer"
-        android:layout_width="336dp"
-        android:layout_height="200dp"
+        android:layout_width="323dp"
+        android:layout_height="219dp"
         app:layout_constraintBottom_toBottomOf="@id/recipeBoard"
         app:layout_constraintEnd_toEndOf="@id/recipeBoard"
-        app:layout_constraintHorizontal_bias="0.564"
         app:layout_constraintStart_toStartOf="@id/recipeBoard"
         app:layout_constraintTop_toTopOf="@id/recipeBoard"
-        app:layout_constraintVertical_bias="0.798">
+        app:layout_constraintVertical_bias="0.677">
 
         <include layout="@layout/reusable_instruction_block" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -39,13 +38,13 @@
         android:id="@+id/backButton"
         android:layout_width="120dp"
         android:layout_height="60dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="8dp"
         android:background="@null"
-        android:src="@drawable/back"
-        android:scaleType="fitCenter"
         android:contentDescription="Back"
+        android:scaleType="fitCenter"
+        android:src="@drawable/back"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
