--- a/CookingGameApp/app/src/main/res/layout/activity_instruction.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_instruction.xml
@@ -74,7 +74,7 @@
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
                     android:src="@drawable/position"
-                    android:contentDescription="Position Image" />
+                    android:contentDescription="@string/position_image" />
             </LinearLayout>
         </ScrollView>
 
@@ -96,7 +96,7 @@
         android:background="@null"
         android:src="@drawable/back"
         android:scaleType="fitCenter"
-        android:contentDescription="Back"
+        android:contentDescription="@string/backbtn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="30dp"
